# django-auto-gitlab

./: LICENSE  README.md  README.rst  setup.cfg
auto_gitlab/: apps.py  enums.py  gitlab_instance.py  gitlab_manager.py  permissions.py  tests.py  urls.py  utils.py  views.py
auto_gitlab/config/: app_config.py  app_config_instance.py  config_schema.py  constants.py  exceptions.py  parser.py  tests.py
auto_gitlab/tests/: test_config.py  test_gitlab.py
docs/: conf.py  index.md
docs/source/: conf.py  configuration.rst  index.rst  install.rst  usage.rst
