[metadata]
name = django-auto-gitlab
version = 1.0.0
author = Sebastian Jędrzejewski
author_email = sebastian.jedrzejewski12@gmail.com
description = Package that helps managing GitLab tasks labels automatically
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT
url = https://github.com/sebastian-jedrzejewski/django-auto-gitlab
classifiers =
    Framework :: Django
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.7
install_requires =
    django >=3
    djangorestframework >=3.11
    python-gitlab
    pyyaml
    retrying
    cerberus
packages = find:

[options.packages.find]
where = .
exclude =
    auto_gitlab.tests
